// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Babel returns for development 1`] = `
Object {
  "es5": Object {
    "devtool": false,
    "entry": Array [
      "/Users/luisherranz/Code/frontity/packages/core/src/client",
    ],
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [],
              "presets": Array [
                "es5-development",
              ],
            },
          },
        },
      ],
    },
    "name": "es5",
    "output": Object {
      "chunkFilename": "[name].es5.js",
      "filename": "main.es5.js",
      "path": "/Users/luisherranz/Code/frontity/packages/core/src/build/static",
    },
    "plugins": Array [],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "web",
  },
  "module": Object {
    "devtool": "cheap-module-eval-source-map",
    "entry": Array [
      "webpack-hot-middleware/client",
      "/Users/luisherranz/Code/frontity/packages/core/src/client",
    ],
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [],
              "presets": Array [
                "module-development",
              ],
            },
          },
        },
      ],
    },
    "name": "client",
    "output": Object {
      "chunkFilename": "[name].module.js",
      "filename": "main.module.js",
      "path": "/Users/luisherranz/Code/frontity/packages/core/src/build/static",
    },
    "plugins": Array [
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "loadable-stats.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
      HotModuleReplacementPlugin {
        "fullBuildTimeout": 200,
        "multiStep": undefined,
        "options": Object {},
        "requestTimeout": 10000,
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "web",
  },
  "node": Object {
    "devtool": "cheap-module-eval-source-map",
    "entry": Array [
      "/Users/luisherranz/Code/frontity/packages/core/src/server",
    ],
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [],
              "presets": Array [
                "node-development",
              ],
            },
          },
        },
      ],
    },
    "name": "server",
    "output": Object {
      "filename": "main.js",
      "libraryTarget": "commonjs2",
      "path": "/Users/luisherranz/Code/frontity/packages/core/src/build/dynamic",
    },
    "plugins": Array [
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "loadable-stats.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
      LimitChunkCountPlugin {
        "options": Object {
          "maxChunks": 1,
        },
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "node",
  },
}
`;

exports[`Babel returns for production 1`] = `
Object {
  "es5": Object {
    "devtool": false,
    "entry": Array [
      "/Users/luisherranz/Code/frontity/packages/core/src/client",
    ],
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [],
              "presets": Array [
                "es5-production",
              ],
            },
          },
        },
      ],
    },
    "name": "es5",
    "output": Object {
      "chunkFilename": "[name].es5.[chunkhash].js",
      "filename": "main.es5.[chunkhash].js",
      "path": "/Users/luisherranz/Code/frontity/packages/core/src/build/static",
    },
    "plugins": Array [],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "web",
  },
  "module": Object {
    "devtool": false,
    "entry": Array [
      "/Users/luisherranz/Code/frontity/packages/core/src/client",
    ],
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [],
              "presets": Array [
                "module-production",
              ],
            },
          },
        },
      ],
    },
    "name": "client",
    "output": Object {
      "chunkFilename": "[name].module.[chunkhash].js",
      "filename": "main.module.[chunkhash].js",
      "path": "/Users/luisherranz/Code/frontity/packages/core/src/build/static",
    },
    "plugins": Array [
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "loadable-stats.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "web",
  },
  "node": Object {
    "devtool": false,
    "entry": Array [
      "/Users/luisherranz/Code/frontity/packages/core/src/server",
    ],
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "plugins": Array [],
              "presets": Array [
                "node-production",
              ],
            },
          },
        },
      ],
    },
    "name": "server",
    "output": Object {
      "filename": "main.js",
      "libraryTarget": "commonjs2",
      "path": "/Users/luisherranz/Code/frontity/packages/core/src/build/dynamic",
    },
    "plugins": Array [
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "loadable-stats.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
      LimitChunkCountPlugin {
        "options": Object {
          "maxChunks": 1,
        },
      },
    ],
    "resolve": Object {
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "node",
  },
}
`;
